@@ -1,14 +1,6 @@
-package chapter;
-// This test contains the sample code from the Lock Checker manual chapter
-// modified to fit testing instead of illustrative purposes,
-// and contains other miscellaneous Lock Checker testing.
+// This test contains the sample code from the Lock Checker manual chapter modified to fit testing
+// instead of illustrative purposes, and contains other miscellaneous Lock Checker testing.
 
-import java.util.AbstractCollection;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Iterator;
-import java.util.concurrent.locks.ReentrantLock;
 import org.checkerframework.checker.lock.qual.GuardSatisfied;
 import org.checkerframework.checker.lock.qual.GuardedBy;
 import org.checkerframework.checker.lock.qual.GuardedByBottom;
@@ -18,6 +10,13 @@ import org.checkerframework.checker.lock.qual.LockingFree;
 import org.checkerframework.checker.lock.qual.MayReleaseLocks;
 import org.checkerframework.checker.lock.qual.ReleasesNoLocks;
 import org.checkerframework.checker.nullness.qual.NonNull;
+
+import java.util.AbstractCollection;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Iterator;
+import java.util.concurrent.locks.ReentrantLock;
 
 public class ChapterExamples {
     // This code crashed when there was a bug before issue 524 was fixed.
@@ -427,10 +426,12 @@ public class ChapterExamples {
 
     private @GuardedBy({}) MyClass myField;
 
+    int someInt = 1;
+
     // TODO: For now, boxed types are treated as primitive types. This may change in the future.
-    @SuppressWarnings("deprecation") // new Integer
+    @SuppressWarnings({"deprecation", "removal"}) // new Integer
     void unboxing() {
-        int a = 1;
+        int a = someInt;
         // :: error: (immutable.type.guardedby)
         @GuardedBy("lock") Integer c;
         synchronized (lock) {
@@ -443,24 +444,19 @@ public class ChapterExamples {
         int d;
         synchronized (lock) {
             d = b;
-
-            // Expected, since b cannot be @GuardedBy("lock") since it is a boxed primitive.
-            // :: error: (method.invocation.invalid)
-            d = b.intValue(); // The de-sugared version does not issue an error.
+            d = b.intValue(); // The de-sugared version
         }
 
-        c = c + b; // Syntactic sugar for c = new Integer(c.intValue() + b.intValue()).
+        c = c + b; // Syntactic sugar for c = Integer.valueOf(c.intValue() + b.intValue()).
 
-        // Expected, since b and c cannot be @GuardedBy("lock") since they are boxed primitives.
-        // :: error: (method.invocation.invalid)
         c = new Integer(c.intValue() + b.intValue()); // The de-sugared version
+        c = Integer.valueOf(c.intValue() + b.intValue()); // The de-sugared version
 
         synchronized (lock) {
-            c = c + b; // Syntactic sugar for c = new Integer(c.intValue() + b.intValue()).
+            c = c + b; // Syntactic sugar for c = Integer.valueOf(c.intValue() + b.intValue()).
 
-            // Expected, since b and c cannot be @GuardedBy("lock") since they are boxed primitives.
-            // :: error: (method.invocation.invalid)
             c = new Integer(c.intValue() + b.intValue()); // The de-sugared version
+            c = Integer.valueOf(c.intValue() + b.intValue()); // The de-sugared version
         }
 
         a = b;
@@ -484,13 +480,13 @@ public class ChapterExamples {
       }
 
       // TODO re-enable this error (lock.not.held)
-      c = c + b; // Syntactic sugar for c = new Integer(c.intValue() + b.intValue()), hence 'lock' must be held.
+      c = c + b; // Syntactic sugar for c = Integer.valueOf(c.intValue() + b.intValue()), hence 'lock' must be held.
       // TODO re-enable this error (lock.not.held)
-      c = new Integer(c.intValue() + b.intValue()); // The de-sugared version
+      c = Integer.valueOf(c.intValue() + b.intValue()); // The de-sugared version
 
       synchronized(lock) {
-        c = c + b; // Syntactic sugar for c = new Integer(c.intValue() + b.intValue()), hence 'lock' must be held.
-        c = new Integer(c.intValue() + b.intValue()); // The de-sugared version
+        c = c + b; // Syntactic sugar for c = Integer.valueOf(c.intValue() + b.intValue()), hence 'lock' must be held.
+        c = Integer.valueOf(c.intValue() + b.intValue()); // The de-sugared version
       }
 
       // TODO re-enable this error (lock.not.held)
